--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "primeng": "^17.18.15",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "uuid": "^13.0.0",
     "xlsx": "^0.18.5",
     "xlsx-style": "^0.8.13",
     "zone.js": "~0.14.10"
